--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
 <head>
-	
+<title>
+Jakiś tytuł
+</title>	
 
 </head>
 <body>
+<h1>Jakiś duży nagłówek</h1>
 <p> Coś sobie tu napiszę </p>
 
 </body>
