updated title in index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 html>
 <head>
 <title>
-Jakiś tytuł 
+Jakiś tytuł a teraz zmieniony 
 </title>	
 
 </head>
 <body>
-<h1>Jakiś duży nagłówek</h1>
+<h1>Jakiś duży nagłówek a teraz zmieniony</h1>
 <p> Coś sobie tu napiszę </p>
 
 </body>
